Cleaned up `addedAt` and `updatedAt`
